# epub-convert

./: .gitignore  LICENSE  README.md  epub-convert.py  pyproject.toml  requirements.txt  setup.cfg
epub_convert/: __init__.py
src/epub-convert/: __init__.py
src/epub_convert/: epub_convert.py
